--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "axios": "^0.21.2",
     "google-spreadsheet": "^3.1.15",
-    "puppeteer": "^10.2.0"
+    "node-localstorage": "^2.2.1",
+    "puppeteer": "^10.2.0",
+    "store": "^2.0.12"
   }
 }
