--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.2",
+    "dotenv": "^10.0.0",
     "google-spreadsheet": "^3.1.15",
+    "googleapis": "^86.1.0",
+    "mongoose": "^6.0.5",
     "node-localstorage": "^2.2.1",
     "puppeteer": "^10.2.0",
     "store": "^2.0.12"
